Fixed the card list stretching out the card images so they were out of proportion

--- a/public/global.css
+++ b/public/global.css
@@ -170,6 +170,7 @@ input[type="radio"] {
   display: block;
   border-radius: 12px;
   text-align: center;
+  height: fit-content;
   width: 100%;
 }
 
